@@ -22,19 +22,6 @@ unsafe command openWrite( filename:str ) :streams
 address mnstr_open_wastreamwrap
 comment "open ascii file stream for writing";
 
-unsafe command socketReadBytes(skt:int,name:str):streams
-address mnstr_socket_rstreamwrap
-comment "open a socket stream for reading";
-unsafe command socketWriteBytes(skt:int,name:str):streams
-address mnstr_socket_wstreamwrap
-comment "open a socket stream for writing";
-unsafe command socketRead(skt:int,name:str):streams
-address mnstr_socket_rastreamwrap
-comment "open ascii socket stream for reading";
-unsafe command socketWrite(skt:int,name:str):streams
-address mnstr_socket_wastreamwrap
-comment "open ascii socket stream for writing";
-
 unsafe command blocked( s:streams ) :streams
 address open_block_streamwrap
 comment "open a block based stream";
