@@ -8548,10 +8548,6 @@ Ready.
 [ "streams",	"openWriteBytes",	"command streams.openWriteBytes(filename:str):streams ",	"mnstr_open_wstreamwrap;",	"open a file stream for writing"	]
 [ "streams",	"readInt",	"command streams.readInt(s:streams):int ",	"mnstr_readIntwrap;",	"read integer data from the stream"	]
 [ "streams",	"readStr",	"command streams.readStr(s:streams):str ",	"mnstr_read_stringwrap;",	"read string data from the stream"	]
-[ "streams",	"socketRead",	"command streams.socketRead(skt:int, name:str):streams ",	"mnstr_socket_rastreamwrap;",	"open ascii socket stream for reading"	]
-[ "streams",	"socketReadBytes",	"command streams.socketReadBytes(skt:int, name:str):streams ",	"mnstr_socket_rstreamwrap;",	"open a socket stream for reading"	]
-[ "streams",	"socketWrite",	"command streams.socketWrite(skt:int, name:str):streams ",	"mnstr_socket_wastreamwrap;",	"open ascii socket stream for writing"	]
-[ "streams",	"socketWriteBytes",	"command streams.socketWriteBytes(skt:int, name:str):streams ",	"mnstr_socket_wstreamwrap;",	"open a socket stream for writing"	]
 [ "streams",	"writeInt",	"command streams.writeInt(s:streams, data:int):void ",	"mnstr_writeIntwrap;",	"write data on the stream"	]
 [ "streams",	"writeStr",	"command streams.writeStr(s:streams, data:str):void ",	"mnstr_write_stringwrap;",	"write data on the stream"	]
 [ "sysmon",	"pause",	"pattern sysmon.pause(id:int):void ",	"SYSMONpause;",	"Suspend a running query"	]
