@@ -2,6 +2,8 @@
 # This file is updated with Maddlog
 
 * Mon Aug  7 2017 Sjoerd Mullender <sjoerd@acm.org>
+- Removed MAL functions streams.socketRead, streams.socketReadBytes,
+  streams.socketWrite, and streams.socketWriteBytes.
 - Removed MAL functions streams.openRead(s:streams):streams and
   streams.openWrite(s:streams):streams.
 
